flex_bison_ast/build/expr_parser.output
Terminals unused in grammar

   TK_EOL
   TK_ERROR


Grammar

    0 $accept: input $end

    1 input: expr_list

    2 expr_list: expr_list expr TK_SEMICOLON
    3          | expr TK_SEMICOLON

    4 expr: expr OP_ADD term
    5     | expr OP_SUB term
    6     | term

    7 term: term OP_MUL factor
    8     | term OP_DIV factor
    9     | factor

   10 factor: TK_NUMBER
   11       | TK_IDENT
   12       | TK_LEFT_PAR expr TK_RIGHT_PAR


Terminals, with rules where they appear

$end (0) 0
error (256)
OP_ADD (258) 4
OP_SUB (259) 5
OP_MUL (260) 7
OP_DIV (261) 8
TK_RIGHT_PAR (262) 12
TK_LEFT_PAR (263) 12
TK_SEMICOLON (264) 2 3
TK_IDENT (265) 11
TK_NUMBER (266) 10
TK_EOL (267)
TK_ERROR (268)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
input (15)
    on left: 1, on right: 0
expr_list (16)
    on left: 2 3, on right: 1 2
expr (17)
    on left: 4 5 6, on right: 2 3 4 5 12
term (18)
    on left: 7 8 9, on right: 4 5 6 7 8
factor (19)
    on left: 10 11 12, on right: 7 8 9


State 0

    0 $accept: . input $end
    1 input: . expr_list
    2 expr_list: . expr_list expr TK_SEMICOLON
    3          | . expr TK_SEMICOLON
    4 expr: . expr OP_ADD term
    5     | . expr OP_SUB term
    6     | . term
    7 term: . term OP_MUL factor
    8     | . term OP_DIV factor
    9     | . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    input      go to state 4
    expr_list  go to state 5
    expr       go to state 6
    term       go to state 7
    factor     go to state 8


State 1

    4 expr: . expr OP_ADD term
    5     | . expr OP_SUB term
    6     | . term
    7 term: . term OP_MUL factor
    8     | . term OP_DIV factor
    9     | . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR
   12       | TK_LEFT_PAR . expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    expr    go to state 9
    term    go to state 7
    factor  go to state 8


State 2

   11 factor: TK_IDENT .

    $default  reduce using rule 11 (factor)


State 3

   10 factor: TK_NUMBER .

    $default  reduce using rule 10 (factor)


State 4

    0 $accept: input . $end

    $end  shift, and go to state 10


State 5

    1 input: expr_list .  [$end]
    2 expr_list: expr_list . expr TK_SEMICOLON
    4 expr: . expr OP_ADD term
    5     | . expr OP_SUB term
    6     | . term
    7 term: . term OP_MUL factor
    8     | . term OP_DIV factor
    9     | . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    $default  reduce using rule 1 (input)

    expr    go to state 11
    term    go to state 7
    factor  go to state 8


State 6

    3 expr_list: expr . TK_SEMICOLON
    4 expr: expr . OP_ADD term
    5     | expr . OP_SUB term

    OP_ADD        shift, and go to state 12
    OP_SUB        shift, and go to state 13
    TK_SEMICOLON  shift, and go to state 14


State 7

    6 expr: term .  [OP_ADD, OP_SUB, TK_RIGHT_PAR, TK_SEMICOLON]
    7 term: term . OP_MUL factor
    8     | term . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 6 (expr)


State 8

    9 term: factor .

    $default  reduce using rule 9 (term)


State 9

    4 expr: expr . OP_ADD term
    5     | expr . OP_SUB term
   12 factor: TK_LEFT_PAR expr . TK_RIGHT_PAR

    OP_ADD        shift, and go to state 12
    OP_SUB        shift, and go to state 13
    TK_RIGHT_PAR  shift, and go to state 17


State 10

    0 $accept: input $end .

    $default  accept


State 11

    2 expr_list: expr_list expr . TK_SEMICOLON
    4 expr: expr . OP_ADD term
    5     | expr . OP_SUB term

    OP_ADD        shift, and go to state 12
    OP_SUB        shift, and go to state 13
    TK_SEMICOLON  shift, and go to state 18


State 12

    4 expr: expr OP_ADD . term
    7 term: . term OP_MUL factor
    8     | . term OP_DIV factor
    9     | . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    term    go to state 19
    factor  go to state 8


State 13

    5 expr: expr OP_SUB . term
    7 term: . term OP_MUL factor
    8     | . term OP_DIV factor
    9     | . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    term    go to state 20
    factor  go to state 8


State 14

    3 expr_list: expr TK_SEMICOLON .

    $default  reduce using rule 3 (expr_list)


State 15

    7 term: term OP_MUL . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    factor  go to state 21


State 16

    8 term: term OP_DIV . factor
   10 factor: . TK_NUMBER
   11       | . TK_IDENT
   12       | . TK_LEFT_PAR expr TK_RIGHT_PAR

    TK_LEFT_PAR  shift, and go to state 1
    TK_IDENT     shift, and go to state 2
    TK_NUMBER    shift, and go to state 3

    factor  go to state 22


State 17

   12 factor: TK_LEFT_PAR expr TK_RIGHT_PAR .

    $default  reduce using rule 12 (factor)


State 18

    2 expr_list: expr_list expr TK_SEMICOLON .

    $default  reduce using rule 2 (expr_list)


State 19

    4 expr: expr OP_ADD term .  [OP_ADD, OP_SUB, TK_RIGHT_PAR, TK_SEMICOLON]
    7 term: term . OP_MUL factor
    8     | term . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 4 (expr)


State 20

    5 expr: expr OP_SUB term .  [OP_ADD, OP_SUB, TK_RIGHT_PAR, TK_SEMICOLON]
    7 term: term . OP_MUL factor
    8     | term . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 5 (expr)


State 21

    7 term: term OP_MUL factor .

    $default  reduce using rule 7 (term)


State 22

    8 term: term OP_DIV factor .

    $default  reduce using rule 8 (term)
